home page clock

--- a/countDownTimer.html
+++ b/countDownTimer.html
@@ -16,7 +16,7 @@
 <header role="heading">
     <nav role="navigation">
         <div class="inlineBlock" id="brandNameContainer">
-         <h1 class="whiteText">Time App</h1>
+         <h1><a href="index.html" class="whiteText">Time App</a> </h1>
          </div>
         <div  class="inlineBlock menuContainer">
          <ul class="inlineBlock menu"> 
