--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta name="decsriptiom" content="timer app">
-            <title>Timer App</title>
+            <title>Time App</title>
             
             <link href="resetCss.css" rel="stylesheet" type="text/css">
             <link href="indexcss.css" rel="stylesheet" type="text/css">
@@ -38,8 +38,11 @@
 </header>
 <main role="main">
 
+<p id="homeDate"></p>
+<p id="homeClock"></p>
 </main>
 </body>
+<script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="countDownTimer.js" ></script>
 
 </html>
