--- a/index.html
+++ b/index.html
@@ -38,8 +38,24 @@
 </header>
 <main role="main">
 
-<p id="homeDate"></p>
-<p id="homeClock"></p>
+<!-- <p id="homeDate"></p>
+<p id="homeClock"></p> -->
+
+<div class="centerText">
+        <!-- id="homeClock" -->
+<div class="rotatingClock centerText inlineBlock"> 
+    <div class="secondNeedle">
+
+    </div>
+    <div class="minuteNeedle">
+
+    </div>
+    <div class="hourNeedle">
+
+    </div>
+</div>
+</div>
+
 </main>
 </body>
 <script type="text/javascript" src="script.js"></script>
