got my clock hands to work

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
             <meta name="decsriptiom" content="timer app">
             <title>Time App</title>
             
-            <!-- <link href="resetCss.css" rel="stylesheet" type="text/css"> -->
+            <link href="resetCss.css" rel="stylesheet" type="text/css">
             <link href="indexcss.css" rel="stylesheet" type="text/css">
 
 
     </head>
 <body>
-<!-- <header role="heading">
+<header role="heading">
     <nav role="navigation">
         <div class="inlineBlock" id="brandNameContainer">
          <h1><a href="index.html" class="whiteText">Time App</a></h1>
@@ -35,7 +35,7 @@
          </ul>
         </div>
     </nav>
-</header> -->
+</header>
 <main role="main">
 
 <!-- <p id="homeDate"></p>
@@ -48,9 +48,9 @@
     </div>
     <div class="dot"></div>
     <div>
-        <div class="hourHand"></div>
-        <div class="minuteHand"></div>
-        <div class="secondHand"></div>
+        <div class="clockHand hourHand"></div>
+        <div class="clockHand minuteHand"></div>
+        <div class="clockHand secondHand"></div>
     </div> 
     <div>
         <span class="hour3">3</span>
@@ -63,7 +63,7 @@
 
 </main>
 </body>
-<script type="text/javascript" src="script.js"></script> 
+<script type="text/javascript" src="script.js"></script>  
 <script type="text/javascript" src="countDownTimer.js" ></script>
 
 </html>
