shadows to the anolog clock

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
             <meta name="decsriptiom" content="timer app">
             <title>Time App</title>
             
-            <link href="resetCss.css" rel="stylesheet" type="text/css">
-            <link href="indexcss.css" rel="stylesheet" type="text/css">
+            <link href="reset.css" rel="stylesheet" type="text/css">
+            <link href="main.css" rel="stylesheet" type="text/css">
 
 
     </head>
