styled the nav bar

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
          </div>
         <div  class="inlineBlock menuContainer">
          <ul class="inlineBlock menu"> 
-            <li class="inlineBlock">
-                <a href="#" class="menuItem whiteText">World Clock</a>
+            <li class="inlineBlock menuItem">
+                <a href="#" class="whiteText">World Clock</a>
             </li>
-            <li class="inlineBlock">
-                <a href="countDownTimer.html" class="menuItem whiteText">Timer</a>
+            <li class="inlineBlock menuItem">
+                <a href="countDownTimer.html" class="whiteText">Timer</a>
             </li>
-            <li class="inlineBlock">
-                <a href="#" class="menuItem whiteText">Stopwatch</a>
+            <li class="inlineBlock menuItem">
+                <a href="#" class="whiteText">Stopwatch</a>
             </li>
-            <li class="inlineBlock">
-                <a href="#" class="menuItem whiteText">Alarm</a>
+            <li class="inlineBlock menuItem">
+                <a href="#" class="whiteText">Alarm</a>
             </li>    
          </ul>
         </div>
