--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             
             <link href="reset.css" rel="stylesheet" type="text/css">
             <link href="main.css" rel="stylesheet" type="text/css">
+            <link rel="stylesheet" href="analogClock.css">
 
 
     </head>
@@ -16,7 +17,7 @@
 <header role="heading">
     <nav role="navigation">
         <div class="inlineBlock" id="brandNameContainer">
-         <h1><a href="index.html" class="whiteText">Time App</a></h1>
+         <h1><a href="index.html" class="whiteText"><strong>Time App</strong></a></h1>
          </div>
         <div  class="inlineBlock menuContainer">
          <ul class="inlineBlock menu"> 
@@ -38,13 +39,10 @@
 </header>
 <main role="main">
 
-<!-- <p id="homeDate"></p>
-<p id="homeClock"></p> -->
-
 <div class="analogClock">
     <div>
-        <div class="analogClockDate"></div>
-        <div class="analogClockDay"></div>
+        <div class="analogText clockDate"></div>
+        <div class="analogText clockDay"></div>
     </div>
     <div class="dot"></div>
     <div>
@@ -53,10 +51,10 @@
         <div class="clockHand secondHand"></div>
     </div> 
     <div>
-        <span class="hour3">3</span>
-        <span class="hour6">6</span>
-        <span class="hour9">9</span>
-        <span class="hour12">12</span>
+        <span class="hour hour3">3</span>
+        <span class="hour hour6">6</span>
+        <span class="hour hour9">9</span>
+        <span class="hour hour12">12</span>
     </div>
     <div class="diallines"></div>
 </div>
@@ -64,6 +62,4 @@
 </main>
 </body>
 <script type="text/javascript" src="script.js"></script>  
-<script type="text/javascript" src="countDownTimer.js" ></script>
-
 </html>
