--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#" class="whiteText">World Clock</a>
             </li>
             <li class="inlineBlock menuItem">
-                <a href="countDownTimer.html" class="whiteText">Timer</a>
+                <a href="./countDownTimer/countDownTimer.html" class="whiteText">Timer</a>
             </li>
             <li class="inlineBlock menuItem">
                 <a href="#" class="whiteText">Stopwatch</a>
