--- a/countDownTimer/countDownTimer.html
+++ b/countDownTimer/countDownTimer.html
@@ -11,11 +11,11 @@
             <link href="../main.css" rel="stylesheet" type="text/css">
             <style>
             #background{
-                width: 57px;
-                height: 57px;    
+                width: 14px;
+                height: 14px;    
                 max-width: 322px;
                 max-height: 322px;
-                background: pink; 
+                background:radial-gradient(white, rgba(40, 53, 147, 0.2), rgba(95, 95, 196, 0.5));
                 border-radius: 50%;
                 position: absolute;
                 margin:auto;
@@ -25,6 +25,8 @@
                 bottom:0; 
         
             }
+            /* #283593
+            #5f5fc4 */
             
             </style>
 
