--- a/countDownTimer/countDownTimer.html
+++ b/countDownTimer/countDownTimer.html
@@ -70,7 +70,7 @@
     </div>
     
     
-    <div id="countDownTimerContainer">    </div>    
+    <div id="countDownTimerContainer">       
     <div class="analogClock" id="analogClock">
         <div id="background"></div>
         <div class="dot"></div>
@@ -81,6 +81,7 @@
     <div class="timerValueContainer" id= "timerValueContainer">
     <p id="timerValue"> 0Days 0Hrs 0Min 0Sec</p>
     <button id="startButton">Start</button>
+    </div>
     </div>
 
 </main>
