timer setter design for count down timer

--- a/countDownTimer/countDownTimer.html
+++ b/countDownTimer/countDownTimer.html
@@ -42,8 +42,8 @@
                 <h1 class="title">Count Down Timer</h1>
         </div>
           
-    <div class="timerSetterContainer">
-     <h2>Timer Setter:</h2>    
+        <h2>Timer Setter</h2>    
+    <div class="timerSetterContainer">   
      <form>
      <div class="inlineBlock">
       <label for="calendar" class="dateLabel">Date:</label><br> 
@@ -52,15 +52,15 @@
      <div class="inlineBlock timePickerContainer">
       <div class="inlineBlock">
        <label for="hourInput">Hours:</label><br>
-       <input type="text" id="hourInput" placeholder="00">
+       <input type="number" id="hourInput" placeholder="00">
       </div>
       <div class="inlineBlock">
        <label for="minuteInput">Minutes:</label><br>
-       <input type="text" id="minuteInput" placeholder="00">
+       <input type="number" id="minuteInput" placeholder="00">
       </div>
       <div class="inlineBlock">
        <label for="secondInput">Seconds:</label><br> 
-       <input type="text" id="secondInput" placeholder="00"><br>
+       <input type="number" id="secondInput" placeholder="00" autofocus><br>
       </div>
      </div>
      </form>
