styled start/ stop buttons for countDown clock

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
 </header>
 <main role="main">
-
+<div class="clockContainer">
 <div class="analogClock">
     <div>
         <div class="analogText clockDate"></div>
@@ -58,7 +58,7 @@
     </div>
     <div class="diallines"></div>
 </div>
-
+</div>
 </main>
 </body>
  <script type="text/javascript" src="script.js"></script>    
