count down timer toggle buttons

--- a/countDownTimer/countDownTimer.html
+++ b/countDownTimer/countDownTimer.html
@@ -73,14 +73,14 @@
     
     
     <div id="countDownTimerContainer" class="clockContainer">
-     <div class="buttonContainer" id="startPauseButton">
+     <div class="buttonContainer" id="startPauseButtonContainer">
         <!-- <div class="buttonHead medBackground"></div> -->
-        <button class="buttonHead medBackground">Start</button>
+        <button class="buttonHead medBackground" id="startPauseButton"><span class="startPauseButtonText" id="startPauseButtonText"></span></button>
         <div class="buttonStem medBackground"></div>
      </div> 
-    <div class="buttonContainer" id="stopResumeButton"> 
+    <div class="buttonContainer" id="stopResumeButtonContainer"> 
         <!-- <div class="buttonHead medBackground"></div> -->
-        <button class="buttonHead medBackground">Stop</button>
+        <button class="buttonHead medBackground" id="stopResumeButton"><span class="stopResumeButtonText" id="stopResumeButtonText"></span></button>
         <div class="buttonStem medBackground"></div>
      </div>          
      <div class="analogClock" id="analogClock">
