--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             
             <link href="reset.css" rel="stylesheet" type="text/css">
             <link href="main.css" rel="stylesheet" type="text/css">
-            <link rel="stylesheet" href="analogClock.css">
+            <link href="analogClock/analogClock.css" rel="stylesheet" type="text/css">
 
 
     </head>
@@ -61,5 +61,6 @@
 </div>
 </main>
 </body>
- <script type="text/javascript" src="script.js"></script>    
+ <script type="text/javascript" src="script.js"></script>   
+ <script type="text/javascript" src="analogClock/analogClock.js"></script>     
 </html>
